--- a/package.json
+++ b/package.json
@@ -42,8 +42,11 @@
   },
   "devDependencies": {
     "eslint-config-airbnb": "^19.0.4",
-    "stylelint": "^15.6.1",
-    "stylelint-config-standard": "^33.0.0",
-    "stylelint-config-standard-scss": "^9.0.0"
+    "postcss-lit": "^1.1.0",
+    "stylelint": "^13.13.1",
+    "stylelint-config-standard": "^21.0.0",
+    "stylelint-config-standard-scss": "^9.0.0",
+    "stylelint-csstree-validator": "^1.9.0",
+    "stylelint-scss": "^3.21.0"
   }
 }
