--- a/package.json
+++ b/package.json
@@ -41,7 +41,16 @@
     ]
   },
   "devDependencies": {
-    "eslint-config-airbnb": "^19.0.4",
+    "@babel/core": "^7.21.8",
+    "@babel/eslint-parser": "^7.21.8",
+    "@babel/plugin-syntax-jsx": "^7.21.4",
+    "@babel/preset-react": "^7.18.6",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "postcss-lit": "^1.1.0",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
