--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     ]
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "bootstrap": "^5.2.3",
     "postcss-flexbugs-fixes": "^5.0.2",
     "prop-types": "^15.8.1",
@@ -39,6 +40,7 @@
     "react-dom": "^18.2.0",
     "react-github-calendar": "^4.0.0",
     "react-icons": "^4.8.0",
+    "react-intersection-observer": "^9.5.2",
     "react-router-dom": "^6.11.1",
     "react-scripts": "^5.0.1",
     "typewriter-effect": "^2.19.0",
